[package]
name = "teralight"
version = "0.1.0"
authors = ["Daine Mamacos <scuzzy@reverseorder.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
bytes = "0.5"
serialport = "3.3"
crc16 = "0.4"
log = "0.4"
log4rs = { version = "0.13", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
lazy_static = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rusoto_core = { version = "0.43", default_features=false, features=["rustls"] }
rusoto_cloudwatch = { version = "0.43", default_features=false, features=["rustls"] }
